<resources>
    <string name="app_name">Assign4 2019 Stephen Coy</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="ui_time_entries">
        <item>" 2"</item>
        <item>" 3"</item>
        <item>" 4"</item>
        <item>" 5"</item>
        <item>"10"</item>
        <item>"14"</item>

    </string-array>
    <string name="customer_name">Name</string>
    <string name="ready_time">Delivery/Collection in (days)</string>
    <string name="order_message_1">Please find my order attached</string>
    <string name="order_message_instructions">Delivery/Collection Address: </string>
    <string name="order_message_end">Regards</string>
    <string name="customer_name_blank">You did not enter your name.</string>
    <string name="address_field_blank">Address for Collection/Delivery Required.</string>
    <string name="address_blank">You did not enter an address.</string>
    <string name="notification_title">Notification!</string>
    <string name="image_confirm">Image saved successfully </string>
    <string name="to_email">my-tshirt@sda.ie</string>
    <string name="email_subject">Order Request </string>
    <string name="radiobutton1">Delivery</string>
    <string name="radiobutton2">Collection</string>
    <string name="TakePhototext">Take Photo for T-Shirt</string>
    <string name="sendButton">Send Order</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab1_Intro">Welcome to Stephen\'s Handy Tool and T-Shirt App!</string>
    <string name="tab1_Second_Text_View">Specialised Hand Tools</string>
    <string name="tab1_Third_Text_View">Create your own customised tools or T-Shirts!</string>
    <string name="colAddress"></string>
</resources>
